# my-api-project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/api/: main.py
tests/: test_api.py
