[project]
name = "my-api-project"
version = "0.2.1"
description = "Python API with conventional commits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "commitizen>=3.29.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
version_files = [
    "pyproject.toml:version",
    "src/api/main.py:API_VERSION",
]
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "bump: version $current_version → $new_version"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
